--- a/templates/about.html
+++ b/templates/about.html
@@ -22,8 +22,8 @@
                 <div class = "banner-content">
                   <h1>Introduction </h1>
                     <p class = "text">The purpose of this website is to help students gain a deeper understanding of
-                        topics in computer architecture. This website concentrates on processor datapaths and control
-                        and pipelining. We want to create a learning application in order to strengthen the knowledge
+                        topics in computer architecture. This website concentrates on processor datapaths and control.
+                        We want to create a learning application in order to strengthen the knowledge
                         of students By providing educational information and offering quizzes that will help sharpen
                         the learned material. Part of learning a new concept is relating to the material and having fun
                         with it. We want to use this idea to make our learning platform as productive and successful for
@@ -46,18 +46,23 @@
   </body>
     <section>
         <div tabindex="0">
-            <button>Aviv and Azie</button>
-            <p>Education and Research</p>
+            <button>Aviv</button>
+            <p>Education <br> Research</p>
         </div>
         <div tabindex="0">
             <button>Tosh</button>
-            <p>Quiz Curriculum</p>
+            <p>Quiz Curriculum <br> PowerPoint Presentation</p>
         </div>
         <div tabindex="0">
             <button>Nguyen</button>
-            <p>Web Development</p>
+            <p>Web Development <br> Organized Data</p>
+        </div>
+        <div tabindex="0">
+            <button>Azie</button>
+            <p>To be  <br> Decided</p>
         </div>
     </section>
+
 
 
 </html>
