--- a/templates/about2.html
+++ b/templates/about2.html
@@ -19,10 +19,43 @@
               <button class="btn" onclick="location.href='about'" type="button">Home</button>
           </nav>
             <div class = "banner" style="margin-top: 100px">
+
                 <div class = "banner-content">
-                  <h1>Introduction </h1>
-                    <p class = "text">Introduction</p>
-                  <p class = "text">Education on data path cycle goes here</p>
+                  <h1>Processors, Register, and Memory </h1>
+                    <p class = "text">The processor contains two types of components:
+                        Data path- set of components in the processor that together execute an instruction.
+                        Control- “The brain”, tells the components in the processor what to do (like OS and hardware).</p>
+
+                  <p class = "text">The register file (RF) is a hardware device that has two read ports and one write
+                      port (corresponding to the two inputs and one output of the ALU). The RF and the ALU together
+                      comprise the two elements required to compute MIPS instructions. The register file contains an
+                      array of processor registers. Typically, we can read values from two registers at a time, and are
+                      only able to write to one register at a time. We need to tell the register file which registers
+                      we want to read from and write to Register banking is the method of using a single name to access
+                      multiple different physical registers depending on the operating mode.</p>
+                    <div>
+<div style="float: right">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqxklnZbwLlgcBS-Ryv3ja9Vzlil6OBwrnaw&usqp=CAU" />
+</div>
+<p class = "text">The register file (RF) is a hardware device that has two read ports and one write
+                      port (corresponding to the two inputs and one output of the ALU). The RF and the ALU together
+                      comprise the two elements required to compute MIPS instructions. The register file contains an
+                      array of processor registers. Typically, we can read values from two registers at a time, and are
+                      only able to write to one register at a time. We need to tell the register file which registers
+                      we want to read from and write to Register banking is the method of using a single name to access
+                      multiple different physical registers depending on the operating mode.</p>
+
+</div>
+                    <div>
+<div style="float: right">
+<img src=" " />
+</div>
+                    <p class = "text"> On-chip memory, therefore, it is the first-level cache. The CPU has separate data and
+                        instruction memory. The CPU first-level cache memory is slower than registers but faster than
+                        main memory -> 2-10 cycles for loads. Larger than registers but smaller than main memory.</p>
+</div>
+
+
 
                  </div>
                 </div>
@@ -37,18 +70,23 @@
   </body>
     <section>
         <div tabindex="0">
-            <button>Aviv and Azie</button>
-            <p>Education and Research</p>
+            <button>Aviv</button>
+            <p>Education <br> Research</p>
         </div>
         <div tabindex="0">
             <button>Tosh</button>
-            <p>Quiz Curriculum</p>
+            <p>Quiz Curriculum <br> PowerPoint Presentation</p>
         </div>
         <div tabindex="0">
             <button>Nguyen</button>
-            <p>Web Development</p>
+            <p>Web Development <br> Organized Data</p>
+        </div>
+        <div tabindex="0">
+            <button>Azie</button>
+            <p>To be <br> Decided</p>
         </div>
     </section>
+
 
 
 </html>
