--- a/templates/about3.html
+++ b/templates/about3.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>About3 page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/style.css">
+  </head>
+  <body>
+    <header>
+        <div class = "container">
+          <!-- navbar -->
+          <nav class = "navbar" style="align-items: flex-start">
+            <a class = "navbar-brand">Whiz Quiz</a>
+              <button class="btn" onclick="location.href='quizOverview'" type="button">Quiz</button>
+              <button class="btn" onclick="location.href='about'" type="button">Home</button>
+          </nav>
+            <div class = "banner" style="margin-top: 100px">
+                <div class = "banner-content">
+                  <h1>Arithmetic Logic Unit (ALU) and Multiplexer (MUX) </h1>
+                    <p class = "text">An arithmetic logic unit (ALU) is a major component of the CPU computer system.
+                        It does all processes related to arithmetic and logic operations that need to be done on
+                        instruction words and registers. Therefore, the ALU is like the calculator of the CPU.
+</p>
+                    <div>
+<div style="float: right">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZFdsPMP5P9r86OICM3PBjOBvqYgV-LIRbxQ&usqp=CAU" />
+</div>
+                    <p class = "text">A multiplexer (MUX) is a device that can receive multiple input signals and
+                      synthesize a single output signal in a recoverable manner for each input signal. It is also an
+                      integrated system that usually contains a certain number of data inputs and a single output. The
+                      Mux is an important part of the CPU, since it allows it to execute a variety of instructions that
+                      need to be computed and executed differently.</p>
+</div>
+                 </div>
+                </div>
+              </div>
+              <!-- end of banner  -->
+
+            </div>
+
+            <button onclick="location.href='about2'">Previous</button>
+            <button onclick="location.href='about4'">Next</button>
+          </header>
+  </body>
+    <section>
+        <div tabindex="0">
+            <button>Aviv</button>
+            <p>Education <br> Research</p>
+        </div>
+        <div tabindex="0">
+            <button>Tosh</button>
+            <p>Quiz Curriculum <br> PowerPoint Presentation</p>
+        </div>
+        <div tabindex="0">
+            <button>Nguyen</button>
+            <p>Web Development <br> Organized Data</p>
+        </div>
+        <div tabindex="0">
+            <button>Azie</button>
+            <p>To be <br> Decided</p>
+        </div>
+    </section>
+
+
+
 </html>
