--- a/templates/quizOverview.html
+++ b/templates/quizOverview.html
@@ -21,8 +21,11 @@
             <div class = "banner" style="margin-top: 100px">
                 <div class = "banner-content">
                   <h1>Quiz Overview </h1>
-                    <p class = "text">Introduction to the quizzes goes here.</p>
-                  <p class = "text">More Education on data path cycle goes here</p>
+                    <p class = "text">The quiz purpose is to test computer architecture knowledge, and concentrates
+                        on Data paths and control, as well as the components of a CPU. The quizzes represented are
+                        multiple-choice and prompt whether the answer is correct/incorrect after each question answered.
+                        The quizzes also provide feedback as to why the answer chosen is correct/incorrect. The overall
+                        goal is to offer students a variety of quizzes to test and educate students.</p>
                  </div>
                 </div>
               </div>
@@ -32,17 +35,22 @@
   </body>
     <section>
         <div tabindex="0">
-            <button>Aviv and Azie</button>
-            <p>Education and Research</p>
+            <button>Aviv</button>
+            <p>Education <br> Research</p>
         </div>
         <div tabindex="0">
             <button>Tosh</button>
-            <p>Quiz Curriculum</p>
+            <p>Quiz Curriculum <br> PowerPoint Presentation</p>
         </div>
         <div tabindex="0">
             <button>Nguyen</button>
-            <p>Web Development</p>
+            <p>Web Development <br> Organized Data</p>
+        </div>
+        <div tabindex="0">
+            <button>Azie</button>
+            <p>To be <br> Decided</p>
         </div>
     </section>
+
 
 </html>
