--- a/templates/about4.html
+++ b/templates/about4.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>About4 page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/style.css">
+  </head>
+  <body>
+    <header>
+        <div class = "container">
+          <!-- navbar -->
+          <nav class = "navbar" style="align-items: flex-start">
+            <a class = "navbar-brand">Whiz Quiz</a>
+              <button class="btn" onclick="location.href='quizOverview'" type="button">Quiz</button>
+              <button class="btn" onclick="location.href='about'" type="button">Home</button>
+          </nav>
+            <div class = "banner" style="margin-top: 100px">
+                <div class = "banner-content">
+                  <h1>Instruction Execution </h1>
+                    <p class = "text">The tasks involved in instruction execution can be generalized as follows:
+                        Fetch -> Decode -> Execute.
+</p>
+                  <p class = "text">In the fetch stage, the Control Unit generates the control signals that copy an
+                      instruction byte from the memory into the Instruction Register, IR. The address of this
+                      instruction is in the Program Counter, PC.</p>
+
+                    <p class = "text">The decoding process allows the CPU to determine what instruction is to be
+                        performed so that the CPU can tell how many operands it needs to fetch to perform the
+                        instruction. The opcode fetched from the memory is decoded for the next steps and moved
+                        to the appropriate registers.</p>
+
+                    <p class = "text">The CPU sends the decoded instruction as a set of control signals to the
+                        corresponding computer components. If the instruction involves arithmetic or logic, the ALU
+                        is utilized. This is the only stage of the instruction cycle that is useful from the perspective
+                        of the end-user. Everything else is overhead required to make the execute step happen.</p>
+                 </div>
+                </div>
+              </div>
+              <!-- end of banner  -->
+
+            </div>
+
+            <button onclick="location.href='about3'">Previous</button>
+            <button >Time For Quiz</button>
+          </header>
+  </body>
+    <section>
+        <div tabindex="0">
+            <button>Aviv</button>
+            <p>Education <br> Research</p>
+        </div>
+        <div tabindex="0">
+            <button>Tosh</button>
+            <p>Quiz Curriculum <br> PowerPoint Presentation</p>
+        </div>
+        <div tabindex="0">
+            <button>Nguyen</button>
+            <p>Web Development <br> Organized Data</p>
+        </div>
+        <div tabindex="0">
+            <button>Azie</button>
+            <p>To be <br> Decided</p>
+        </div>
+    </section>
+
+
+
 </html>
