--- a/templates/quiz1c.html
+++ b/templates/quiz1c.html
@@ -71,7 +71,7 @@
             </div>
 
             <button onclick="location.href='quiz1b'">Previous</button>
-            <button>Try Quiz 2</button>
+            <button onclick="location.href='quiz2'">Quiz 2</button>
           </header>
   </body>
     <section>
