--- a/templates/about4.html
+++ b/templates/about4.html
@@ -45,7 +45,7 @@
             </div>
 
             <button onclick="location.href='about3'">Previous</button>
-            <button >Time For Quiz</button>
+            <button onclick="location.href='quiz1'">Time for Quiz 1</button>
           </header>
   </body>
     <section>
